fixing gap in index.php

--- a/portfolio/css/first.css
+++ b/portfolio/css/first.css
@@ -296,8 +296,17 @@ header {
 .breaker.active {
   animation: break 4s;
   background: linear-gradient(#404040,#151415);
+  width: 100%;
+  height: 100%;
+  z-index: 500;
+  top: 0%;
 }
 @keyframes break {
+  0%{
+    width: 0%;
+    top: 50%;
+    height: 2%;
+  }
   25% {
     width: 100%;
     top: 50%;
